overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -231,8 +231,10 @@ font-weight: 300;
 }
 
    /* MEDIA QUERY AREA */
+
+   
 /* Mobile device */
- @media (max-width:700px){
+ @media (max-width:647px){
      main{
          overflow: hidden;
      }
@@ -302,19 +304,27 @@ text-align: center;
      }
     }
 
-    /* Tablet Device */
-    @media (min-width:701px) and (max-width:992px){
+    /* Tablet Device and Mini Desktops*/
+    @media (min-width:648px) and (max-width:1075px){
         header{
             max-width: 992px ;
             flex-wrap: wrap;
         }
+        .navigation ul{ 
+            display: flex;
+            flex-direction: column;
+        }
         .popular-products,.creative{
          grid-template-columns: 1fr 1fr;
-         row-gap:15px ;
+         column-gap: 0;
          align-items: center;
     }
     .banner{
         grid-template-columns: 1fr;
+        flex-wrap: wrap;
+    }
+    .banner-text{
+        order: 2;
     }
      .logos{
          display: none;
@@ -325,4 +335,117 @@ text-align: center;
      .form{
          margin-right: 60%;
      }
+}
+   /* MEDIA QUERY AREA */
+
+   
+/* Mobile device */
+ @media (max-width:647px){
+     main{
+         overflow: hidden;
+     }
+    .navigation ul{
+        display: block;
+    }
+    header{
+        margin: 10px 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        
+    }
+    .head-title{
+        padding-left: 18%;
+    }
+     .logos{
+         display: none;
+     }
+     
+    
+     .banner,.popular-products,.creative{
+         display: flex;
+         flex-direction: column;
+         justify-content: center;
+         align-items: center;
+         row-gap:15px ;
+         
+         
+     }
+     .banner-image{
+         display: flex;
+         justify-content: center;
+     }
+     .banner-image img{
+         max-width: 350px;
+         max-height: 350px;
+         
+     }
+     .banner-text{
+         order: 2;
+         justify-content: center;
+         align-items: center;
+         text-align: center;
+     }
+     .banner-text h1{
+         font-size: 28px;
+line-height: 42px;
+text-align: center;
+     }
+     .see-more{
+         position: static;
+     }
+     .form{
+         display: flex;
+         flex-direction: column;
+         justify-content: center;
+         align-items: flex-start;
+         
+     }
+     
+     .form-title{
+         margin: 0;
+         padding-top: 60%;
+         background: none;
+     }
+    }
+
+    /* Tablet Device and Mini Desktops*/
+    @media (min-width:648px) and (max-width:1075px){
+        main{
+            overflow: hidden;
+        }
+        header{
+            max-width: 992px ;
+            flex-wrap: wrap;
+        }
+        .navigation ul{ 
+            display: flex;
+            flex-direction: column;
+        }
+        .popular-products,.creative{
+         grid-template-columns: 1fr 1fr;
+         column-gap: 5%;
+         align-items: center;
+    }
+    .banner{
+        grid-template-columns: 1fr;
+        flex-wrap: wrap;
+    }
+    .banner-text{
+        order: 2;
+    }
+     .logos{
+         display: none;
+     }
+      .see-more{
+         position: static;
+     }
+     .form{
+         margin-right: 60%;
+     }
+}
+/* OVERFLOX FIXED */
+@media (min-width:1076px){
+    main{overflow: hidden;}
 }
